--- a/package.json
+++ b/package.json
@@ -60,9 +60,10 @@
     "@storybook/react": "^7.6.4",
     "@storybook/react-vite": "^7.6.4",
     "@storybook/testing-library": "^0.2.2",
-    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.12",
     "@types/leaflet": "^1.9.8",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.6",
@@ -71,7 +72,8 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^0.34.6",
+    "@vitest/coverage-v8": "^1.2.2",
+    "@vitest/ui": "^1.2.2",
     "add": "^2.0.6",
     "arquero": "^5.3.0",
     "clean-publish": "^4.2.0",
@@ -92,7 +94,7 @@
     "formik": "^2.4.5",
     "html-react-parser": "^3.0.16",
     "husky": "^8.0.3",
-    "jsdom": "^21.1.2",
+    "jsdom": "^24.0.0",
     "leaflet": "^1.9.4",
     "lerna": "^7.4.2",
     "lint-staged": "^13.3.0",
@@ -117,7 +119,7 @@
     "vite": "^5.1.0",
     "vite-plugin-dts": "^3.6.4",
     "vite-tsconfig-paths": "^4.2.2",
-    "vitest": "^0.34.6",
+    "vitest": "^1.2.2",
     "yup": "^1.3.2",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
