--- a/examples/uikit-vite-ts/package.json
+++ b/examples/uikit-vite-ts/package.json
@@ -19,10 +19,12 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@hitachivantara/uikit-uno-preset": "latest",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^4.0.4",
     "typescript": "^5.3.3",
+    "unocss": "^0.58.5",
     "vite": "^5.1.0"
   }
 }
