--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -34,11 +34,11 @@
     "react-router-dom": "^6.20.1",
     "reactflow": "^11.10.1",
     "swr": "^2.2.4",
+    "usehooks-ts": "^2.16.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
     "@hitachivantara/uikit-uno-preset": "*",
-    "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
