chore: add chromatic

--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -6,6 +6,8 @@ runs:
   steps:
     - name: Checkout
       uses: actions/checkout@v4
+      with:
+        fetch-depth: ${{ env.GITHUB_TOKEN }}
 
     - name: Install Node.js
       uses: actions/setup-node@v4
