--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -6,9 +6,13 @@ on:
     inputs:
       publish-folder:
         type: string
+      publish-storybook:
+        type: boolean
+        default: true
 
 env:
   PUBLISH_FOLDER: ${{ inputs.publish-folder || github.ref_name }}
+  PUBLISH_STORYBOOK: ${{ inputs.publish-storybook }}
 
 jobs:
   build-artifacts:
@@ -24,6 +28,7 @@ jobs:
         env:
           APP_BASE_PATH: /uikit-app/${{ env.PUBLISH_FOLDER }}/
           NEXTRA_BASE_PATH: /uikit-docs/${{ env.PUBLISH_FOLDER }}
+          PUBLISH_STORYBOOK: ${{ env.PUBLISH_STORYBOOK }}
 
   deploy-artifacts:
     name: Deploy
@@ -45,6 +50,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy Artifacts
+        if: ${{ (matrix.artifact != 'documentation') || (matrix.artifact == 'documentation' && env.PUBLISH_STORYBOOK == 'true') }}
         uses: ./.github/actions/deploy-artifacts
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
