--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -15,14 +15,14 @@ jobs:
     uses: ./.github/workflows/static-checks.yml
     secrets: inherit
 
-  applitools:
-    name: Applitools Tests
-    uses: ./.github/workflows/tests-applitools.yml
+  chromatic:
+    name: Chromatic Tests
+    uses: ./.github/workflows/tests-chromatic.yml
     secrets: inherit
 
   notify-fail:
     name: Notify Fail
-    needs: [static-checks, applitools]
+    needs: [static-checks, chromatic]
     if: failure()
     runs-on: ubuntu-latest
 
@@ -52,7 +52,7 @@ jobs:
   release:
     name: Release
     if: github.event_name == 'schedule' && !contains(github.event.head_commit.message, '${ RELEASE_COMMIT_MESSAGE }')
-    needs: [static-checks, applitools]
+    needs: [static-checks, chromatic]
     runs-on: ubuntu-latest
     steps:
       - name: Trigger Release
