--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,19 +4,21 @@ on:
   pull_request:
     branches:
       - master
-      - "next*"
+
+# Cancel previous call in progress
+concurrency:
+  group: ${{ github.head_ref }}
+  cancel-in-progress: true
 
 jobs:
   static-checks:
     name: Static Checks
     uses: ./.github/workflows/static-checks.yml
 
-  applitools:
-    name: Applitools
-    uses: ./.github/workflows/tests-applitools.yml
+  chromatic:
+    name: Chromatic
+    uses: ./.github/workflows/tests-chromatic.yml
     secrets: inherit
-    with:
-      batch-id: pr-${{ github.event.number }}
 
   artifacts:
     name: Artifacts
@@ -24,3 +26,4 @@ jobs:
     secrets: inherit
     with:
       publish-folder: pr-${{ github.event.number }}
+      publish-storybook: false
