--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "add": "^2.0.6",
     "arquero": "^5.3.0",
     "axe-playwright": "^2.0.1",
+    "chromatic": "^11.0.8",
     "clean-publish": "^4.2.0",
     "clsx": "^2.0.0",
     "echarts": "^5.4.3",
