--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@vitest/ui": "^1.2.2",
     "add": "^2.0.6",
     "arquero": "^5.3.0",
+    "chromatic": "^11.0.8",
     "clean-publish": "^4.2.0",
     "clsx": "^2.0.0",
     "echarts": "^5.4.3",
