--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Load blackduck project properties
         shell: bash
-        run: echo "BLACKDUCK_ARGS=$(awk '{print}' ORS=' ' .github/security-configurations/blackduck-${{ matrix.PACKAGE }}.properties)" >> $GITHUB_ENV
+        run: echo "BLACKDUCK_ARGS=$(.github/scripts/getBlackduckArgs ${{ matrix.PACKAGE }})" >> $GITHUB_ENV
 
       - name: Blackduck Scan
         uses: lumada-common-services/gh-composite-actions@1.9.0
