ci: fixes in security scans workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -133,34 +133,12 @@ jobs:
   security-scans:
     name: Security Scans
     needs: [publish-artifacts]
-    uses: ./.github/workflows/security.yml
-    secrets: inherit
-
-  notify-fail:
-    name: Notify Fail
-    needs: [security-scans]
-    if: failure()
     runs-on: ubuntu-latest
-
     steps:
-      - uses: technote-space/workflow-conclusion-action@v1
-
-      - name: Notify Fail
-        uses: hbfernandes/slack-action@1.0
-        env:
-          SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
-          CONCLUSION: ${{ env.WORKFLOW_CONCLUSION }}
-          COLOR: "#C62828"
-        with:
-          args: |
-            {
-              "channel": "ui-kit-internal",
-              "attachments": [
-                {
-                  "mrkdwn_in": ["text"],
-                  "color": "${{env.COLOR}}",
-                  "title": "Security Scans failed",
-                  "title_link": "${{ env.RUN_URL }}"
-                }
-              ]
-            }
+      - name: Trigger Security Scans
+        # repo scope personal token is required to generate a dispatch event
+        run: |
+          curl -X POST \
+            https://api.github.com/repos/${{ github.repository }}/dispatches \
+            -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' \
+            -d '{"event_type": "security"}'
