--- a/.eslintrc
+++ b/.eslintrc
@@ -106,6 +106,13 @@
       }
     },
     {
+      "files": ["**/templates/**/*.ts?(x)"],
+      "rules": {
+        "import/no-extraneous-dependencies": "off",
+        "import/no-relative-packages": "off"
+      }
+    },
+    {
       "files": [
         "**/*.stories.ts?(x)",
         "**/stories/**/*",
