--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -22,6 +22,13 @@
   "bugs": {
     "url": "https://github.com/lumada-design/hv-uikit-react/issues"
   },
+  "scripts": {
+    "clean": "npx rimraf package",
+    "pretest": "node src/index.js create uikit-app -t Form,ListView",
+    "test": "cd uikit-app",
+    "posttest": "rm -rf uikit-app",
+    "prepublishOnly": "run-s clean && npx clean-publish"
+  },
   "dependencies": {
     "chalk": "^5.2.0",
     "colors": "^1.4.0",
@@ -33,7 +40,19 @@
   "devDependencies": {
     "@types/fs-extra": "^11.0.1"
   },
+  "engineStrict": true,
   "engines": {
     "node": ">=16"
+  },
+  "files": [
+    "src"
+  ],
+  "publishConfig": {
+    "access": "public",
+    "directory": "package"
+  },
+  "clean-publish": {
+    "withoutPublish": true,
+    "tempDir": "package"
   }
 }
