chore: update workflows

--- a/.github/actions/install-dependencies/action.yml
+++ b/.github/actions/install-dependencies/action.yml
@@ -7,7 +7,7 @@ runs:
     - name: Checkout
       uses: actions/checkout@v4
       with:
-        fetch-depth: ${{ env.GITHUB_TOKEN }}
+        fetch-depth: ${{ env.FETCH_DEPTH }}
 
     - name: Install Node.js
       uses: actions/setup-node@v4
