chore: bump dependencies
- bump minor dependencies & eslint majors
- remove global dependencies from packages
  - playwright/storybook run "globally" and not per-package

--- a/.eslintrc
+++ b/.eslintrc
@@ -110,6 +110,7 @@
         "**/*.stories.ts?(x)",
         "**/stories/**/*",
         "**/*.test.ts?(x)",
+        "**/*.spec.ts?(x)",
         "docs/**/*",
         "**/test/**/*",
         "**/templates/**/*.ts?(x)"
