test: adapt a11y checks

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -15,7 +15,7 @@ jobs:
     uses: ./.github/workflows/static-checks.yml
     secrets: inherit
     with:
-      a11y-publish: true
+      a11y-exit: false
 
   applitools:
     name: Applitools Tests
