--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build:app": "vite build apps/app",
     "build:nextra": "npm run build -w apps/docs",
     "test": "lerna run test",
-    "test:a11y": "node scripts/a11y-report",
+    "test:a11y": "node scripts/a11y.mjs",
     "test:eyes": "npx eyes-storybook -f .config/applitools.config.js",
     "coverage": "lerna run coverage",
     "check": "npm-run-all --parallel prettier lint typecheck",
@@ -62,6 +62,7 @@
     "@storybook/core-common": "^7.6.4",
     "@storybook/react": "^7.6.4",
     "@storybook/react-vite": "^7.6.4",
+    "@storybook/test-runner": "^0.17.0",
     "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.1.2",
@@ -78,6 +79,7 @@
     "@vitest/ui": "^1.2.2",
     "add": "^2.0.6",
     "arquero": "^5.3.0",
+    "axe-playwright": "^2.0.1",
     "clean-publish": "^4.2.0",
     "clsx": "^2.0.0",
     "echarts": "^5.4.3",
