--- a/.github/workflows/tests-a11y.yml
+++ b/.github/workflows/tests-a11y.yml
@@ -4,10 +4,6 @@ on:
   workflow_dispatch:
   workflow_call:
     inputs:
-      publish:
-        type: boolean
-        default: false
-        required: false
       exit:
         type: boolean
         default: false
@@ -25,6 +21,9 @@ jobs:
       - name: Install Dependencies
         uses: ./.github/actions/install-dependencies
 
+      - name: Install Playwright
+        run: npx playwright install --with-deps
+
       - name: Build Storybook
         run: npm run build:doc
         env:
@@ -36,23 +35,3 @@ jobs:
           npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
           "npx serve dist -l 6006 -L" \
           "npx wait-on tcp:6006 && npm run test:a11y -- --exit ${{ inputs.exit }}"
-
-      - name: Archive a11y report
-        if: success() || failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: a11y-report
-          path: ${{ github.workspace }}/a11y-report
-          retention-days: 2
-
-      - name: Deploy Artifacts
-        if: ${{ inputs.publish == true && (success() || failure()) }}
-        uses: ./.github/actions/deploy-artifacts
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ORG_GHPAGES_DEPLOY_KEY: ${{ secrets.ORG_GHPAGES_DEPLOY_KEY }}
-          PUBLISH_REPO: ${{ github.repository_owner }}/${{ github.repository_owner }}.github.io
-          PUBLISH_FOLDER: uikit-a11y
-          PUBLISH_MESSAGE: "chore: publish NEXT UI Kit accessibility report"
-          URL: https://${{ github.repository_owner }}.github.io/uikit-a11y/
-          ARTIFACT: a11y-report
