--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -46,12 +46,12 @@
     "@hitachivantara/uikit-styles": "^5.28.0"
   },
   "devDependencies": {
+    "@svgr/core": "^8.1.0",
+    "@svgr/plugin-jsx": "^8.1.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "by-node-env": "^2.0.1",
     "cpy-cli": "^4.2.0",
-    "html-to-react": "^1.7.0",
-    "jsdom-no-contextify": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "recursive-readdir": "^2.2.3",
     "svgo": "^3.1.0",
