--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lab:flow": "node scripts/flow-styles"
   },
   "devDependencies": {
+    "@applitools/eyes-storybook": "^3.47.4",
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
     "@dnd-kit/core": "^6.1.0",
