--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -15,19 +15,14 @@ jobs:
     uses: ./.github/workflows/static-checks.yml
     secrets: inherit
 
-  applitools:
-    name: Applitools Tests
-    uses: ./.github/workflows/tests-applitools.yml
-    secrets: inherit
-
-  chromatic:
-    name: Chromatic Tests
-    uses: ./.github/workflows/tests-chromatic.yml
+  visual-tests:
+    name: Visual Tests
+    uses: ./.github/workflows/tests-visual.yml
     secrets: inherit
 
   notify-fail:
     name: Notify Fail
-    needs: [static-checks, chromatic, applitools]
+    needs: [static-checks, visual-tests]
     if: failure()
     runs-on: ubuntu-latest
 
@@ -57,7 +52,7 @@ jobs:
   release:
     name: Release
     if: github.event_name == 'schedule' && !contains(github.event.head_commit.message, '${ RELEASE_COMMIT_MESSAGE }')
-    needs: [static-checks, applitools] # For now the release won't fail because of Chromatic. To be changed when is Applitools is removed.
+    needs: [static-checks, visual-tests]
     runs-on: ubuntu-latest
     steps:
       - name: Trigger Release
