chore(cli): dynamic template loading & rimraf

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -26,7 +26,7 @@
     "clean": "npx rimraf package",
     "pretest": "node src/index.js create uikit-app -t Form,ListView",
     "test": "cd uikit-app",
-    "posttest": "rm -rf uikit-app",
+    "posttest": "npx rimraf uikit-app",
     "prepublishOnly": "run-s clean && npx clean-publish"
   },
   "dependencies": {
