--- a/package.json
+++ b/package.json
@@ -55,16 +55,16 @@
     "@mdx-js/react": "^2.3.0",
     "@mui/material": "^5.14.20",
     "@playwright/test": "^1.41.1",
-    "@storybook/addon-a11y": "^7.6.4",
-    "@storybook/addon-essentials": "^7.6.4",
-    "@storybook/addon-links": "^7.6.4",
-    "@storybook/addons": "^7.6.4",
-    "@storybook/core-common": "^7.6.4",
-    "@storybook/jest": "^0.2.3",
-    "@storybook/react": "^7.6.4",
-    "@storybook/react-vite": "^7.6.4",
+    "@storybook/addon-a11y": "^8.0.5",
+    "@storybook/addon-essentials": "^8.0.5",
+    "@storybook/addon-links": "^8.0.5",
+    "@storybook/core-common": "^8.0.5",
+    "@storybook/manager-api": "^8.0.5",
+    "@storybook/preview-api": "^8.0.5",
+    "@storybook/react": "^8.0.5",
+    "@storybook/react-vite": "^8.0.5",
+    "@storybook/test": "^8.0.5",
     "@storybook/test-runner": "^0.17.0",
-    "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
@@ -81,7 +81,7 @@
     "add": "^2.0.6",
     "arquero": "^5.3.0",
     "axe-playwright": "^2.0.1",
-    "chromatic": "^11.0.8",
+    "chromatic": "^11.3.0",
     "clean-publish": "^4.2.0",
     "clsx": "^2.0.0",
     "echarts": "^5.4.3",
@@ -115,8 +115,8 @@
     "react-hook-form": "^7.49.0",
     "react-leaflet": "^4.2.1",
     "reactflow": "^11.10.1",
-    "remark-gfm": "^3.0.1",
-    "storybook": "^7.6.4",
+    "remark-gfm": "^4.0.0",
+    "storybook": "^8.0.5",
     "swr": "^2.2.4",
     "typescript": "^4.9.5",
     "uid": "^2.0.2",
