--- a/.config/chromatic.config.json
+++ b/.config/chromatic.config.json
@@ -1,5 +1,5 @@
 {
   "projectId": "Project:66040297ad386b97be078cc9",
-  "buildScriptName": "build:doc",
+  "buildScriptName": "build:doc:test",
   "skip": "dependabot/**"
 }
