--- a/.github/workflows/tests-a11y.yml
+++ b/.github/workflows/tests-a11y.yml
@@ -20,7 +20,7 @@ jobs:
         run: npx playwright install --with-deps
 
       - name: Build Storybook
-        run: npm run build:doc
+        run: npm run build:doc:test
         env:
           NODE_OPTIONS: "--max_old_space_size=8192"
         shell: bash
