--- a/.config/chromatic.config.json
+++ b/.config/chromatic.config.json
@@ -2,5 +2,6 @@
   "projectId": "Project:66040297ad386b97be078cc9",
   "buildScriptName": "build:doc",
   "onlyChanged": true,
-  "skip": "dependabot/**"
+  "skip": "dependabot/**",
+  "forceRebuild": true
 }
