--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -50,6 +50,7 @@ jobs:
       fail-fast: false
       matrix:
         PACKAGE:
+          - "cli"
           - "code-editor"
           - "core"
           - "icons"
@@ -81,23 +82,21 @@ jobs:
             rm -rf node_modules package.json package-lock.json && \
             cd packages/${{ matrix.PACKAGE }} && npm i
 
-      - name: Get BlackDuck project name
-        run: echo "BLACKDUCK_PROJECT=$(./.github/scripts/getBlackduckProject.sh ${{ matrix.PACKAGE }})" >> $GITHUB_ENV
-
-      - name: Get BlackDuck project version
-        run: echo "PROJECT_VERSION=$( npm pkg get version --workspaces=false | tr -d '"' )" >> $GITHUB_ENV
+      - name: Load BlackDuck variables
         working-directory: packages/${{ matrix.PACKAGE }}
+        run: |
+          echo "PROJECT_NAME=$(npm pkg get name --workspaces=false | tr -d '""')" >> $GITHUB_ENV
+          echo "PROJECT_VERSION=$(npm pkg get version --workspaces=false | tr -d '"')" >> $GITHUB_ENV
 
       - name: Load blackduck project properties
-        shell: bash
-        run: echo "BLACKDUCK_ARGS=$(.github/scripts/getBlackduckArgs.js ${{ matrix.PACKAGE }})" >> $GITHUB_ENV
+        run: echo "BLACKDUCK_ARGS=$(.github/scripts/getBlackduckArgs.mjs ${{ matrix.PACKAGE }})" >> $GITHUB_ENV
 
       - name: Blackduck Scan
         uses: lumada-common-services/gh-composite-actions@1.9.0
         env:
           BLACKDUCK_DOCKER_USERNAME: hvservices-service-cicd
           BLACKDUCK_DOCKER_PASSWORD: ${{ secrets.ARTIFACTORY_HVSERVICES_CICD_TOKEN }}
-          BlackDuck_Project_Name: "@hitachivantara/uikit-${{ env.BLACKDUCK_PROJECT }}"
+          BlackDuck_Project_Name: "${{ env.PROJECT_NAME }}"
           BlackDuck_Source_Path: /workdir/packages
           BlackDuck_Project_Version: "${{ env.PROJECT_VERSION }}"
           BlackDuck_Api_Token: "${{ secrets.BLACKDUCK_TOKEN }}"
