--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -58,6 +58,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@vitest/ui": "^1.3.1",
     "npm-run-all": "^4.1.5",
     "vite": "^5.1.0",
     "vitest": "^1.2.2"
