--- a/packages/viz/package.json
+++ b/packages/viz/package.json
@@ -24,6 +24,9 @@
   },
   "scripts": {
     "build": "npm run clean && vite build",
+    "test": "vitest run",
+    "test:update": "vitest -u",
+    "test:ui": "vitest --ui",
     "clean": "npx rimraf dist package",
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "run-s clean build && npx clean-publish"
@@ -46,7 +49,8 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "npm-run-all": "^4.1.5",
-    "vite": "^5.1.0"
+    "vite": "^5.1.0",
+    "vitest": "^1.2.2"
   },
   "files": [
     "dist"
