--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
   "rules": {
     "arrow-body-style": "off",
     "prefer-arrow-callback": "off",
+    "react/jsx-key": "error",
     "react/prop-types": "off",
     "react/no-unused-prop-types": "off",
     "react/require-default-props": "off",
