--- a/package.json
+++ b/package.json
@@ -54,16 +54,16 @@
     "@mdx-js/react": "^2.3.0",
     "@mui/material": "^5.14.20",
     "@playwright/test": "^1.41.1",
-    "@storybook/addon-a11y": "^8.0.5",
-    "@storybook/addon-essentials": "^8.0.5",
-    "@storybook/addon-links": "^8.0.5",
-    "@storybook/core-common": "^8.0.5",
-    "@storybook/manager-api": "^8.0.5",
-    "@storybook/preview-api": "^8.0.5",
-    "@storybook/react": "^8.0.5",
-    "@storybook/react-vite": "^8.0.5",
-    "@storybook/test": "^8.0.5",
-    "@storybook/test-runner": "^0.17.0",
+    "@storybook/addon-a11y": "^8.2.4",
+    "@storybook/addon-essentials": "^8.2.4",
+    "@storybook/addon-links": "^8.2.4",
+    "@storybook/core-common": "^8.2.4",
+    "@storybook/manager-api": "^8.2.4",
+    "@storybook/preview-api": "^8.2.4",
+    "@storybook/react": "^8.2.4",
+    "@storybook/react-vite": "^8.2.4",
+    "@storybook/test": "^8.2.4",
+    "@storybook/test-runner": "^0.19.1",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
@@ -115,7 +115,7 @@
     "react-leaflet": "^4.2.1",
     "reactflow": "^11.10.1",
     "remark-gfm": "^4.0.0",
-    "storybook": "^8.0.5",
+    "storybook": "^8.2.4",
     "swr": "^2.2.4",
     "typescript": "^5.5.4",
     "uid": "^2.0.2",
@@ -130,8 +130,8 @@
     "zustand": "^4.4.7"
   },
   "overrides": {
-    "storycrawler": {
-      "puppeteer-core": "20.9.0"
+    "eslint-plugin-jsx-a11y": {
+      "aria-query": "^5.3.0"
     }
   },
   "husky": {
