--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -57,7 +57,7 @@
     "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
     "detect-browser": "^5.3.0",
-    "embla-carousel-react": "^8.0.0-rc15",
+    "embla-carousel-react": "^8.1.3",
     "notistack": "^2.0.8",
     "rc-slider": "^10.5.0",
     "rc-tooltip": "^6.1.2",
