--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "prettier:fix": "prettier --write .",
     "lint": "eslint . --ext .ts,.tsx --cache",
     "lint:fix": "npm run lint -- --fix",
-    "lint-staged": "lint-staged",
     "typecheck": "lerna run typecheck",
     "depcheck": "npx -y owasp-dependency-check --project uikit -o reports --cveStartYear 2015",
     "publish:test": "lerna publish --conventional-graduate --yes --no-git-tag-version --no-push",
@@ -40,6 +39,7 @@
     "lab:flow": "node scripts/flow-styles"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
     "@dnd-kit/core": "^6.1.0",
@@ -50,7 +50,6 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@mdx-js/react": "^2.3.0",
     "@mui/material": "^5.14.20",
     "@playwright/test": "^1.41.1",
@@ -102,10 +101,7 @@
     "jsdom": "^24.0.0",
     "leaflet": "^1.9.4",
     "lerna": "^7.4.2",
-    "lint-staged": "^15.2.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.9",
     "pretty-quick": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -136,15 +132,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
-  },
-  "lint-staged": {
-    "*.{ts,tsx}": [
-      "eslint --ext .ts,.tsx --cache",
-      "pretty-quick --staged"
-    ]
   },
   "commitlint": {
     "extends": [
