--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "test": "lerna run test",
     "test:a11y": "node scripts/a11y.mjs",
     "coverage": "lerna run coverage",
-    "check": "npm-run-all --parallel prettier lint typecheck",
-    "prettier": "prettier --log-level warn --check .",
-    "prettier:fix": "prettier --write .",
-    "lint": "eslint . --ext .ts,.tsx --cache",
-    "lint:fix": "npm run lint -- --fix",
+    "check": "biome check && npm run typecheck",
+    "format": "biome format",
+    "format:fix": "biome format --write",
+    "lint": "biome lint",
+    "lint:fix": "biome lint --write",
     "typecheck": "lerna run typecheck",
     "depcheck": "npx -y owasp-dependency-check --project uikit -o reports --cveStartYear 2015",
     "publish:test": "lerna publish --conventional-graduate --yes --no-git-tag-version --no-push",
@@ -71,8 +71,6 @@
     "@types/node": "^20.11.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^1.2.2",
     "@vitest/ui": "^1.2.2",
@@ -84,24 +82,12 @@
     "clsx": "^2.0.0",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
-    "eslint": "^8.55.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^18.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-ssr-friendly": "^1.3.0",
-    "eslint-plugin-storybook": "^0.8.0",
     "formik": "^2.4.5",
     "html-react-parser": "^3.0.16",
     "husky": "^8.0.3",
     "jsdom": "^24.0.0",
     "leaflet": "^1.9.4",
     "lerna": "^7.4.2",
-    "npm-run-all": "^4.1.5",
     "pretty-quick": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
