--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -46,6 +46,7 @@
     "@hitachivantara/uikit-react-core": "^5.66.7",
     "@hitachivantara/uikit-react-icons": "^5.10.1",
     "@hitachivantara/uikit-styles": "^5.30.2",
+    "@mui/base": "^5.0.0-beta.40",
     "@types/react-grid-layout": "^1.3.5",
     "react-grid-layout": "^1.4.4",
     "reactflow": "^11.10.1",
