--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
       published: ${{ steps.check-updates.outputs.published }}
 
     permissions:
-      contents: read
+      contents: write
       id-token: write
 
     steps:
