--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -5,7 +5,7 @@
   "author": "Hitachi Vantara UI Kit Team",
   "description": "NEXT Design System icons packaged as a set of React components.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
-  "main": "./src/index.ts",
+  "main": "src/index.ts",
   "sideEffects": false,
   "keywords": [
     "hitachi-vantara",
@@ -16,7 +16,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/lumada-design/hv-uikit-react.git"
+    "url": "https://github.com/lumada-design/hv-uikit-react.git",
+    "directory": "packages/icons"
   },
   "license": "Apache-2.0",
   "bugs": {
