--- a/packages/uno-preset/package.json
+++ b/packages/uno-preset/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@hitachivantara/uikit-uno-preset",
   "version": "0.2.23",
+  "private": false,
+  "author": "Hitachi Vantara UI Kit Team",
   "description": "UI Kit UnoCSS preset with the NEXT theme.",
   "homepage": "https://github.com/lumada-design/hv-uikit-react",
-  "author": "Hitachi Vantara UI Kit Team",
+  "main": "src/index.ts",
+  "sideEffects": false,
   "keywords": [
     "hitachi-vantara",
     "design-system",
@@ -12,9 +15,15 @@
     "unocss",
     "tailwind"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lumada-design/hv-uikit-react.git",
+    "directory": "packages/uno-preset"
+  },
   "license": "Apache-2.0",
-  "main": "src/index.ts",
-  "sideEffects": false,
+  "bugs": {
+    "url": "https://github.com/lumada-design/hv-uikit-react/issues"
+  },
   "scripts": {
     "build": "vite build",
     "clean": "npx rimraf dist package",
