--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -18,6 +18,7 @@
     "@hitachivantara/uikit-react-lab": "*",
     "@hitachivantara/uikit-react-viz": "*",
     "@hitachivantara/uikit-styles": "*",
+    "@hitachivantara/uikit-react-pentaho": "*",
     "@mui/material": "^5.14.20",
     "arquero": "^5.3.0",
     "clsx": "^2.0.0",
