--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -26,13 +26,12 @@
     "build": "npm run clean && vite build",
     "clean": "npx rimraf dist package",
     "typecheck": "tsc --noEmit",
-    "prepublishOnly": "run-s clean build && npx clean-publish"
+    "prepublishOnly": "npm run build && npx clean-publish"
   },
   "dependencies": {
     "csstype": "^3.1.3"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
     "vite": "^5.1.0"
   },
   "files": [
