--- a/packages/code-editor/package.json
+++ b/packages/code-editor/package.json
@@ -27,7 +27,7 @@
     "build": "npm run clean && vite build",
     "clean": "npx rimraf dist package",
     "typecheck": "tsc --noEmit",
-    "prepublishOnly": "run-s clean build && npx clean-publish"
+    "prepublishOnly": "npm run build && npx clean-publish"
   },
   "peerDependencies": {
     "@emotion/react": "^11.11.1",
@@ -46,7 +46,6 @@
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "npm-run-all": "^4.1.5",
     "vite": "^5.1.0"
   },
   "files": [
