--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -35,7 +35,7 @@
     "convert:copy": "npx cpy \"lib/*\" \"src\"",
     "clean": "npx rimraf dist src sprites package",
     "prepare": "npm run convert",
-    "prepublishOnly": "run-s clean build && npx clean-publish"
+    "prepublishOnly": "npm run build && npx clean-publish"
   },
   "peerDependencies": {
     "@emotion/react": "^11.11.1",
@@ -53,7 +53,7 @@
     "@types/react-dom": "^18.2.17",
     "by-node-env": "^2.0.1",
     "cpy-cli": "^4.2.0",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all2": "^6.2.0",
     "recursive-readdir": "^2.2.3",
     "svgo": "^3.1.0",
     "tsx": "^4.6.2",
